# Template

./: !Update.ps1  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
src/: PCH.h  main.cpp
